cmake_minimum_required(VERSION 3.15)
project(dataStructHomeworks)

set(CMAKE_CXX_STANDARD 11)

add_executable(dataStructHomeworks Solution.cpp OrthogonalList.cpp OrthogonalList.h lettersCombination.cpp lettersCombination.h backTrackDFS.cpp backTrackDFS.h bfsForMinPath.cpp bfsForMinPath.h primForMinBinaryTree.cpp primForMinBinaryTree.h MatchStringName.cpp MatchStringName.h TwoSum.cpp TwoSum.h firstMissingPossitive.cpp)